--- a/Pages/BookList/Index.cshtml
+++ b/Pages/BookList/Index.cshtml
@@ -9,7 +9,7 @@
         <h2 class"text-info"> Book List</h2>
     </div>
     <div class="col-2">
-        <a class = "btn btn-info form-control text-white">Create New Book</a>
+        <a asp-page="Create" class = "btn btn-info form-control text-white">Create New Book</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
@@ -24,6 +24,9 @@
                         <th>
                             <label asp-for="Books.FirstOrDefault().Author"></label>
                         </th>
+                          <th>
+                            <label asp-for="Books.FirstOrDefault().ISBN"></label>
+                        </th>
                     </tr>
                     @foreach (var item in Model.Books)
                     {
@@ -32,7 +35,10 @@
                                 @Html.DisplayFor(m => item.Name)
                             </td>
                               <td>
-                                @Html.DisplayFor(m => item.Name)
+                                @Html.DisplayFor(m => item.Author)
+                            </td>
+                              <td>
+                                @Html.DisplayFor(m => item.ISBN)
                             </td>
                             <td>
                                 <button class="btn btn-danger btn-sm">Delete</button>
