--- a/Pages/BookList/Index.cshtml
+++ b/Pages/BookList/Index.cshtml
@@ -42,7 +42,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-danger btn-sm">Delete</button>
-                                <a class="btn btn-sm btn-success">Edit</a>
+                                <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Edit</a>
                             </td>
                         </tr>
                     }
